// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table node A table with cells containing only ignored elements should render with empty content 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| <!-- Unsupported tag: style -->
| visible content
|}
"
`;

exports[`table node A table with complex nested HTML should render correctly 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Name
! Description
|-
| ''Item Name''
| Some '''bold''' and ''italic'' text with 
line breaks
|}
"
`;

exports[`table node A table with empty cells should render without errors 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| 
| test
|-
| test
| 
|}
"
`;

exports[`table node A table with mixed content including unsupported tags should render 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| '''bold'''
| content
|-
| test

| <!-- Unsupported tag: unsupported -->more content
|}
"
`;

exports[`table node A table with no thead should render 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| test
| test
|}
"
`;

exports[`table node A table with thead should render 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| test
| test
|-
| test
| test
|}
"
`;

exports[`table node A table with whitespace-only cells should render without errors 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| 
| test
|-
| test
| 
|}
"
`;

exports[`table node should handle table cells with li elements without ul/ol wrapper 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Creature
! Slayer Unlock Requirements
! Quantities
! Weightings
! Slayer Point Unlock
|-
| Gryphons
| 
* 51 Slayer
* Troubled Tortugans (45 Sailing required)
* 60 Combat (only relevant if your settings filter tasks by combat level)
| 
* Vannaka: 30 - 80
* Chaeldar: 60 - 100
* Nieve: 110 - 170
* Duradel: 100 - 210
| 
* Vannaka: 5
* Chaeldar: 5
* Nieve: 7
* Duradel: 7
| 
* Wings Spread - Allows Nieve and Duradel to assign Gryphon tasks. Costs 80 Slayer Points.
|}
"
`;

exports[`table node should handle tables with multiple tbody elements 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Header 1
! Header 2
|-
| Row 1 Col 1
| Row 1 Col 2
|-
| Row 2 Col 1
| Row 2 Col 2
|}
"
`;

exports[`table node A table with row headers (<th> in table body) should render correctly 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! 
! EU
! UK
! US East
|-
! F2P
| 456, 455
| 498, 499
| 417, 648
|-
! Members
| 335, 384
| 380, 382
| 629, 630
|}
"
`;

exports[`table node A table with all data cells should render correctly 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Row 1 Col 1
! Row 1 Col 2
|-
| Row 2 Col 1
| Row 2 Col 2
|}
"
`;

exports[`table node A table with mixed th and td in rows should render correctly 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Header 1
! Header 2
! Header 3
|-
! Row Header
| Data 1
| Data 2
|}
"
`;

exports[`table node A table with thead and tbody row headers should render correctly 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Column 1
! Column 2
|-
! Row 1
| Value 1
|-
! Row 2
| Value 2
|}
"
`;

exports[`table node Grid Master news post table should render with row headers correctly 1`] = `
"{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! 
! EU
! UK
! US East
! US West
! Australia
|-
! F2P
| 456, 455
| 498, 499
| 417, 648
| 436, 437
| 537, 691
|-
! Members
| 335, 384, 397, 399, 451, 452, 453, 454, 677, 678
| 380, 382, 661, 662, 663, 664, 665, 666, 667, 623
| 629, 630, 631, 632, 633, 634, 635, 636, 637, 638, 618, 617, 616, 615, 614, 613, 612, 611, 610, 609, 575, 574, 490, 489, 488
| 418, 430, 431, 433, 435, 650, 651, 608, 607, 606, 605, 604, 603, 602, 601, 600, 599, 547, 546, 545, 544, 543, 542, 541, 538
| 591
|-
! Gemstone Crab
| 686
| 675
| 647
| 659
| 690
|-
! Yama
| 685
| 674
| 645
| 658
| 689
|-
! Hueycoatl
| 684
| 673
| 644
| 657
| 688
|-
! Ent Totems
| 683
| 672
| 643
| 656
| 687
|-
! Raids
| 682
| 671
| 642
| 655
| 595
|-
! Blast Furnace
| 681
| 670
| 641
| 654
| 594
|-
! Skilling Bosses
| 680
| 669
| 640
| 653
| 593
|-
! Forestry
| 679
| 668
| 639
| 652
| 592
|}
"
`;
